--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.profile.field_affiliations_ref
     - field.field.node.profile.field_area_interest_ref
+    - field.field.node.profile.field_insurance_ref
     - field.field.node.profile.field_location_ref
     - field.field.node.profile.field_medical_specialties_ref
     - field.field.node.profile.field_profile_board_certified
@@ -54,6 +55,7 @@ third_party_settings:
         - field_profile_education
         - field_area_interest_ref
         - field_medical_specialties_ref
+        - field_insurance_ref
         - field_affiliations_ref
         - field_profile_board_certified
         - field_profile_board_eligible
@@ -136,7 +138,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_affiliations_ref:
-    weight: 16
+    weight: 17
     settings:
       label: above
       formatter_type: null
@@ -147,6 +149,16 @@ content:
     region: content
   field_area_interest_ref:
     weight: 14
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
+    third_party_settings: {  }
+    type: readonly_field_widget
+    region: content
+  field_insurance_ref:
+    weight: 16
     settings:
       label: above
       formatter_type: null
@@ -176,7 +188,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_board_certified:
-    weight: 17
+    weight: 18
     settings:
       label: above
       formatter_type: null
@@ -186,7 +198,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_board_eligible:
-    weight: 18
+    weight: 19
     settings:
       label: above
       formatter_type: null
@@ -298,7 +310,7 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_scheduling:
-    weight: 19
+    weight: 20
     settings:
       label: above
       formatter_type: null
