--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.profile.field_affiliations_ref
     - field.field.node.profile.field_area_interest_ref
+    - field.field.node.profile.field_insurance_ref
     - field.field.node.profile.field_location_ref
     - field.field.node.profile.field_medical_specialties_ref
     - field.field.node.profile.field_profile_board_certified
@@ -55,6 +56,14 @@ content:
     region: content
   field_area_interest_ref:
     weight: 15
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_insurance_ref:
+    weight: 19
     label: above
     settings:
       link: true
