--- a/config/sites/default/core.entity_view_display.node.profile.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.teaser.yml
@@ -104,6 +104,7 @@ content:
 hidden:
   field_affiliations_ref: true
   field_area_interest_ref: true
+  field_insurance_ref: true
   field_profile_board_certified: true
   field_profile_board_eligible: true
   field_profile_education: true
