--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "drupal/default_content": "^1.0@alpha",
         "drupal/devel": "^2.1",
         "drupal/emulsify": "^3.1",
+        "drupal/facets": "^1.4",
         "drupal/field_group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/migrate_plus": "^4.2",
@@ -49,8 +50,8 @@
         "drupal/office_hours": "^1.1",
         "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
-        "drupal/readonly_field_widget": "^1.3",
         "drupal/rabbit_hole": "^1.0@beta",
+        "drupal/readonly_field_widget": "^1.3",
         "drupal/redirect": "^1.4",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
