--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -8,6 +8,7 @@ dependencies:
     - search_api_solr
     - search_api
   config:
+    - field.storage.node.field_location_ref
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
     - field.storage.node.field_services_ref
@@ -19,14 +20,6 @@ name: TowerHealth
 description: ''
 read_only: false
 field_settings:
-  field_medical_specialties_ref:
-    label: 'Medical Specialties'
-    datasource_id: 'entity:node'
-    property_path: field_medical_specialties_ref
-    type: integer
-    dependencies:
-      config:
-        - field.storage.node.field_medical_specialties_ref
   location_services_condition_name:
     label: 'Services » Content » Related Conditions » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -48,6 +41,17 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_services_ref
+      module:
+        - node
+        - node
+  location_title_string:
+    label: 'Location » Content » Title'
+    datasource_id: 'entity:node'
+    property_path: 'field_location_ref:entity:title'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_location_ref
       module:
         - node
         - node
@@ -77,6 +81,17 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: 'field_medical_specialties_ref:entity:name'
     type: text
+    dependencies:
+      config:
+        - field.storage.node.field_medical_specialties_ref
+      module:
+        - taxonomy
+        - taxonomy
+  provider_specialties_name_string:
+    label: 'Medical Specialties » Taxonomy term » Name » String '
+    datasource_id: 'entity:node'
+    property_path: 'field_medical_specialties_ref:entity:name'
+    type: string
     dependencies:
       config:
         - field.storage.node.field_medical_specialties_ref
@@ -152,9 +167,11 @@ processor_settings:
     fields:
       - location_services_condition_name
       - location_services_title
+      - location_title_string
       - name
       - provider_specialties_condition_name
       - provider_specialties_name
+      - provider_specialties_name_string
       - rendered_item
       - title
       - type
