--- a/config/sites/default/core.entity_view_display.node.profile.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.teaser.yml
@@ -115,6 +115,7 @@ hidden:
   field_profile_middle_name: true
   field_profile_npi: true
   field_profile_phone: true
+  field_profile_practid: true
   field_profile_professional_title: true
   field_profile_scheduling: true
   field_profile_type: true
