--- a/config/sites/default/field.storage.node.field_profile_practid.yml
+++ b/config/sites/default/field.storage.node.field_profile_practid.yml
@@ -1,4 +1,4 @@
-uuid: 11aac704-6059-4229-81de-971de9d3e218
+uuid: 6c6f2ac5-28b6-4b7c-ad25-1d735d733029
 langcode: en
 status: true
 dependencies:
@@ -7,11 +7,10 @@ dependencies:
 id: node.field_profile_practid
 field_name: field_profile_practid
 entity_type: node
-type: string
+type: integer
 settings:
-  max_length: 255
-  is_ascii: false
-  case_sensitive: false
+  unsigned: false
+  size: normal
 module: core
 locked: false
 cardinality: 1
