--- a/config/sites/default/taxonomy.vocabulary.area_of_interest.yml
+++ b/config/sites/default/taxonomy.vocabulary.area_of_interest.yml
@@ -2,7 +2,7 @@ uuid: 5c726883-5e49-4cdb-9f76-ce3f23f16ce7
 langcode: en
 status: true
 dependencies: {  }
-name: 'Area of Interest'
+name: 'Clinical Area of Focus'
 vid: area_of_interest
 description: ''
 weight: 0
