Add node merge destination plugin.

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "drupal/components": "^1.1",
         "drupal/config_installer": "^1.8",
         "drupal/config_split": "^1.4",
+        "drupal/config_update": "^1.6",
         "drupal/core": "^8.0@stable",
         "drupal/default_content": "^1.0@alpha",
         "drupal/devel": "^2.1",
@@ -46,6 +47,7 @@
         "drupal/facets": "^1.4",
         "drupal/field_group": "^1.0",
         "drupal/inline_entity_form": "^1.0@RC",
+        "drupal/migrate_devel": "^1.2@beta",
         "drupal/migrate_plus": "^4.2",
         "drupal/migrate_source_csv": "^3.1",
         "drupal/migrate_tools": "^4.3",
