--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -37,6 +37,7 @@ module:
   menu_ui: 0
   migrate: 0
   migrate_plus: 0
+  migrate_source_csv: 0
   migrate_tools: 0
   node: 0
   node_title_help_text: 0
@@ -63,6 +64,7 @@ module:
   toolbar: 0
   towerhealth_autocomplete: 0
   towerhealth_default_content: 0
+  towerhealth_msow_migration: 0
   unified_twig_ext: 0
   update: 0
   user: 0
