Provider migration - initial.

--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
@@ -76,6 +76,10 @@ process:
     plugin: default_value
     default_value: location
 
+  moderation_state:
+    plugin: default_value
+    default_value: published
+
 destination:
   plugin: 'node_merge'
   lookup_field: 'field_location_id'
