--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -12,6 +12,8 @@ module:
   config: 0
   config_filter: 0
   config_split: 0
+  config_update: 0
+  config_update_ui: 0
   content_moderation: 0
   contextual: 0
   ctools: 0
@@ -36,6 +38,7 @@ module:
   media_library: 0
   menu_ui: 0
   migrate: 0
+  migrate_devel: 0
   migrate_plus: 0
   migrate_source_csv: 0
   migrate_tools: 0
