--- a/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
@@ -1,4 +1,4 @@
-uuid: e1f64fa2-43aa-4ab5-ae2f-2e9f30c18a28
+uuid: 0f3938db-29de-4039-b380-d7f5e50d9b43
 langcode: en
 status: true
 dependencies:
@@ -6,7 +6,7 @@ dependencies:
     module:
       - towerhealth_msow_migration
 _core:
-  default_config_hash: zwO2AQ_XKO2cKaEsC7yjtwKdNItKDzmt4PbN0wB7j9s
+  default_config_hash: EKoL2TKETQXKjnSDzWwFG6OgYp-5vB6VBHqX1cYAwYo
 id: towerhealth_providers
 class: null
 field_plugin_method: null
@@ -16,10 +16,10 @@ migration_group: null
 label: 'Import tower health provider content'
 source:
   plugin: csv
-  path: modules/custom/towerhealth_msow_migration/data/tbl_Dir_Practioner.csv
+  path: modules/custom/towerhealth_msow_migration/data/tbl_Dir_Practitioner.csv
   header_offset: 1
   ids:
-    - pract_id
+    - practioner_id
   track_changes: true
   fields:
     -
@@ -50,6 +50,10 @@ source:
       name: npi_id
       label: 'NPI ID'
 process:
+  title:
+    -
+      plugin: default_value
+      default_value: 'TowerHealth Provider'
   field_profile_first_name: first_name
   field_profile_last_name: last_name
   field_profile_middle_name: middle_name
@@ -57,9 +61,35 @@ process:
   field_profile_practid: practioner_id
   field_profile_npi: npi_id
   field_profile_professional_title: professional_title
+  _prepare_type:
+    -
+      plugin: static_map
+      source: employment_status
+      map:
+        employed: employed
+        contracted: contracted
+        '': independent
+  field_profile_type:
+    -
+      plugin: static_map
+      source:
+        - app
+        - '@prepare_type'
+      map:
+        '':
+          employed: tower_health_employed
+          independent: independent
+          contracted: contracted
+        1:
+          employed: app_employed
+          independent: independent
+          contracted: contracted
   type:
     plugin: default_value
     default_value: profile
+  moderation_state:
+    plugin: default_value
+    default_value: published
 destination:
   plugin: node_merge
   lookup_field: field_profile_practid
