--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
@@ -42,7 +42,6 @@ source:
       label: 'NPI ID'
 
 process:
-
   field_profile_first_name: first_name
 
   field_profile_last_name: last_name
@@ -50,6 +49,8 @@ process:
   field_profile_middle_name: middle_name
 
   field_profile_gender:
+    - plugin: default_value
+      default_value: female;
     - plugin: static_map
       source: gender
       map:
@@ -71,6 +72,8 @@ process:
         '': 'independent'
 
   field_profile_type:
+    - plugin: default_value
+      default_value: tower_health_employed;
     - plugin: static_map
       source:
         - app
