--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
@@ -12,36 +12,51 @@ source:
   # Full path to the file.
   path: 'modules/custom/towerhealth_msow_migration/data/tbl_Dir_Practitioner.csv'
   # Column delimiter. Comma (,) by default.
+  delimiter: ','
+  # Field enclosure. Double quotation marks (") by default.
+  enclosure: '"'
   header_row_count: 1
   ids: [practioner_id]
+  track_changes: true
   # Here we identify the columns of interest in the source file.
   # Each numeric key is the 0-based index of the column.
   # For each column, the key below is the field name assigned to
   # the data on import, to be used in field mappings below.
   # The value is a user-friendly string for display by the
   # migration UI.
-  track_changes: true
   fields:
-    - name: practioner_id
+    0:
+      name: practioner_id
       label: 'Practioner ID'
-    - name: last_name
+    1:
+      name: last_name
       label: 'Last name'
-    - name: first_name
-      label: 'Last name'
-    - name: middle_name
+    # Unsure why this column needed to be set to 3 instead of 2.
+    3:
+      name: first_name
+      label: 'First name'
+    4:
+      name: middle_name
       label: 'Middle name'
-    - name: professional_title
+    5:
+      name: professional_title
       label: 'Professional Title'
-    - name: gender
+    6:
+      name: gender
       label: 'Gender'
-    - name: app
+    7:
+      name: app
       label: 'APP'
-    - name: employment_status
+    8:
+      name: employment_status
       label: 'Employment Status'
-    - name: npi_id
+    9:
+      name: npi_id
       label: 'NPI ID'
 
 process:
+  field_profile_practid: practioner_id
+
   field_profile_first_name: first_name
 
   field_profile_last_name: last_name
@@ -49,44 +64,34 @@ process:
   field_profile_middle_name: middle_name
 
   field_profile_gender:
-    - plugin: default_value
-      default_value: 'female';
     - plugin: static_map
       source: gender
       map:
         M: male
         F: female
-
-  field_profile_practid: practioner_id
+    - plugin: default_value
+      default_value: female
 
   field_profile_npi: npi_id
 
   field_profile_professional_title: professional_title
 
-  _prepare_type:
-    - plugin: static_map
-      source: employment_status
-      map:
-        'employed': 'employed'
-        'contracted': 'contracted'
-        '': 'independent'
-
   field_profile_type:
-    - plugin: default_value
-      default_value: 'tower_health_employed';
     - plugin: static_map
       source:
         - app
-        - '@prepare_type'
+        - employment_status
       map:
-        false:
-          employed: tower_health_employed
-          independent: independent
-          contracted: contracted
-        true:
-          employed: app_employed
-          independent: independent
-          contracted: contracted
+        'FALSE':
+          'Employed': tower_health_employed
+          'Contracted': contracted
+          '': independent
+        'TRUE':
+          'Employed': app_employed
+          'Contracted': contracted
+          '': independent
+    - plugin: default_value
+      default_value: tower_health_employed
 
   type:
     plugin: default_value
