--- a/docroot/modules/custom/towerhealth_migration/config/install/migrate_plus.migration.towerhealth_ratings.yml
+++ b/docroot/modules/custom/towerhealth_migration/config/install/migrate_plus.migration.towerhealth_ratings.yml
@@ -35,7 +35,7 @@ source:
   #  plugin: digest
   #  username: totally
   #  password: insecure
-
+  track_changes: true
   # Under 'fields', we list the data items to be imported. The first level keys
   # are the source field names we want to populate (the names to be used as
   # sources in the process configuration below). For each field we're importing,
