--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_languages.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_languages.yml
@@ -1,44 +1,33 @@
-# @file
-# Contains migration configuration for the TowerHealth provider languages.
----
-id: towerhealth_providers_languages
-label: Import tower health provider languages spoken
-migration_groups:
-  - TowerHealth MSOW import
-
+uuid: 9844f03a-9a96-403e-93a4-7296931d87f0
+langcode: en
+status: true
 dependencies:
   enforced:
     module:
       - towerhealth_msow_migration
-
+id: towerhealth_providers_languages
+class: null
+field_plugin_method: null
+cck_plugin_method: null
+migration_tags: null
+migration_group: null
+label: 'Import tower health provider languages spoken'
 source:
-  plugin: 'csv'
-  # Full path to the file.
-  path: 'modules/custom/towerhealth_msow_migration/data/tbl_Dir_Practitioner_Languages.csv'
-  # Column delimiter. Comma (,) by default.
+  plugin: csv
+  path: modules/custom/towerhealth_msow_migration/data/tbl_Dir_Practitioner_Languages.csv
   delimiter: ','
-  # Field enclosure. Double quotation marks (") by default.
   enclosure: '"'
   header_row_count: 1
-  ids: [practioner_id]
+  ids:
+    - practioner_id
   track_changes: true
-  # Here we identify the columns of interest in the source file.
-  # Each numeric key is the 0-based index of the column.
-  # For each column, the key below is the field name assigned to
-  # the data on import, to be used in field mappings below.
-  # The value is a user-friendly string for display by the
-  # migration UI.
   fields:
-    0:
+    -
       name: practioner_id
       label: 'Practioner ID'
-    1:
+    -
       name: language
-      label: 'Language'
-
-destination:
-  plugin: 'entity:node'
-
+      label: Language
 process:
   nid:
     -
@@ -58,7 +47,6 @@ process:
       index:
         - 0
         - value
-
   title:
     -
       plugin: get
@@ -72,11 +60,12 @@ process:
       index:
         - 0
         - value
-
   _languages:
     plugin: towerhealth_append_values
     source: language
     nid: '@nid'
     field: field_profile_languages
-
   field_profile_languages: '@_languages'
+destination:
+  plugin: 'entity:node'
+migration_dependencies: null
