--- a/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
@@ -22,6 +22,7 @@ source:
   urls:
     - modules/custom/towerhealth_migration/data/ratings.json
   item_selector: data/entities
+  track_changes: true
   fields:
     -
       name: display_name
