--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers.yml
@@ -16,7 +16,8 @@ source:
   # Field enclosure. Double quotation marks (") by default.
   enclosure: '"'
   header_row_count: 1
-  ids: [practioner_id]
+  ids:
+   - practioner_id
   track_changes: true
   # Here we identify the columns of interest in the source file.
   # Each numeric key is the 0-based index of the column.
