--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,9 @@
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
         "drupal/workbench": "^1.1",
-        "drupal/workbench_tabs": "^1.3"
+        "drupal/workbench_tabs": "^1.3",
+        "flow/jsonpath": "^0.4.0",
+        "sainsburys/guzzle-oauth2-plugin": "^3.0"
     },
     "require-dev": {
         "behat/behat": "^3.1",
@@ -102,6 +104,9 @@
         "patches": {
             "drupal/migrate_tools": {
                 "'status' is not a log level. (https://www.drupal.org/project/migrate_tools/issues/3073748)": "https://www.drupal.org/files/issues/2019-08-09/3073748-migrate_tools-status_loglevel-2.patch"
+            },
+            "drupal/migrate_plus": {
+                "Add XPath-style filtering ability in JSON data parser plugin. (https://www.drupal.org/project/migrate_plus/issues/3007709)": "https://www.drupal.org/files/issues/2018-11-14/migrate_plus-json-xpath-filtering-3007709-8.patch"
             }
         }
     }
