--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -38,6 +38,7 @@ module:
   media_library: 0
   menu_ui: 0
   migrate: 0
+  migrate_devel: 0
   migrate_plus: 0
   migrate_source_csv: 0
   migrate_tools: 0
