TH-256-Facets-Find-Location

--- a/config/sites/default/views.view.find_a_location.yml
+++ b/config/sites/default/views.view.find_a_location.yml
@@ -296,6 +296,10 @@ display:
       display_extenders: {  }
       path: find-a-location
       exposed_block: true
+      cache:
+        type: none
+      defaults:
+        cache: false
     cache_metadata:
       max-age: -1
       contexts:
